# pumptank

./: .gitignore  LICENSE  README.md
.do/: app.yaml
data/: curve-pdas.json  products.json  products.schema.json  symbol-overrides.json
data/metadata/: images.json  uris.json
docs/: dataset-license.md  design-handoff-prompt.md  fee-routing-runbook.md  font-license.md  launch-set-100.md  no-deal-audit-2026-06-04.md  onboard-form-spec.md  pumpfun-launch-readiness-2026-06.md  pumptank-handoff-review.md  symbol-display-review.md  symbol-overrides-review.md  token-launch-readiness-2026-06-05.md  too-big-sweep-2026-06-04.md  youtube-links.csv
launcher/: .env.example  package-lock.json  package.json
launcher/src/: alt.ts  backfill.ts  (+15 more)
pipeline/: pyproject.toml
pipeline/pumptank_pipeline/: assemble.py  assets.py  cli.py  config.py  filter.py  images.py  ingest.py  models.py  rank.py
pipeline/tests/: conftest.py  test_assemble.py  test_assets.py  test_cli.py  test_config.py  test_filter.py  test_images.py  test_ingest.py  test_models.py  test_rank.py  test_smoke.py
scripts/: build-curve-pdas.cjs  build-token-metadata.py  collect-fees.sh  create-tally-form.mjs  logo-build-worklist.py  logo-card-proto.py  logo-discovery-resume.workflow.js  logo-discovery.workflow.js  logo-download.py  logo-render-cards.py  make-brand-icon.py  merge-youtube.py  spaces-deploy-metadata.py  yt-audit.workflow.js  yt-build-worklist.py  yt-consolidate.py  yt-discovery.workflow.js
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
(+1558 files in other folders)
