[project]
name = "pumptank-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pandas>=2.0", "pydantic>=2.0", "pillow>=10.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "jsonschema>=4.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pumptank_pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
